--- a/templates/result.html
+++ b/templates/result.html
@@ -52,7 +52,7 @@
 <body>
     <div class="result-container">
         <h1>The Diamond Price Will Be</h1>
-        <div class="price">{{ final_result }} </div>
+        <div class="price">{{ final_result }} Rs. </div>
         <a class="back-button" href="/predict">Back to Prediction Page</a>
     </div>
 </body>
