--- a/templates/form.html
+++ b/templates/form.html
@@ -63,32 +63,32 @@
         <form action="{{ url_for('predict_datapoint') }}" method="POST">
             <div class="form-group">
                 <label for="carat">Carat:</label>
-                <input type="text" id="carat" name="carat" placeholder="Enter carat value (float)">
+                <input type="text" id="carat" name="carat" placeholder="Enter carat value ">
             </div>
 
             <div class="form-group">
                 <label for="depth">Depth:</label>
-                <input type="text" id="depth" name="depth" placeholder="Enter depth value (float)">
+                <input type="text" id="depth" name="depth" placeholder="Enter depth value in mm">
             </div>
 
             <div class="form-group">  
-                <label for="table">Table:</label>
-                <input type="text" id="table" name="table" placeholder="Enter table value (float)">
+                <label for="table">Table(width of top of diamond):</label>
+                <input type="text" id="table" name="table" placeholder="Enter table value in mm">
             </div>
             
             <div class="form-group">
                 <label for="x">x:</label>
-                <input type="text" id="x" name="x" placeholder="Enter x value (float)">
+                <input type="text" id="x" name="x" placeholder="Enter x value in mm">
             </div>
           
             <div class="form-group">
                 <label for="y">y:</label>
-                <input type="text" id="y" name="y" placeholder="Enter y value (float)">
+                <input type="text" id="y" name="y" placeholder="Enter y value in mm">
             </div>
           
             <div class="form-group">
                 <label for="z">z:</label>
-                <input type="text" id="z" name="z" placeholder="Enter z value (float)">
+                <input type="text" id="z" name="z" placeholder="Enter z value in mm">
             </div>         
 
             <div class="form-group">
